--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,10 @@ jobs:
         working-directory: ./react_numer-main
         run: npm install
 
+        - name: npm i ci 
+        working-directory: ./react_numer-main
+        run: npm i ci
+
       - name: npm run build
         working-directory: ./react_numer-main
         run: npm run build
