--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: npm install
         working-directory: ./react_numer-main
-        run: npm installgit 
+        run: npm install
 
       - name: npm run build
         working-directory: ./react_numer-main
